TestSerializer/error.txt~

Serializer.c: At top level:
Serializer.c:186:6: warning: conflicting types for ‘write’
 void write(head2 * Serializer, FILE * file) {
      ^
Serializer.c:107:3: note: previous implicit declaration of ‘write’ was here
   write(&head2_data, file);
   ^
In file included from Serializer.h:5:0,
                 from Serializer.c:3:
Serializer.c: In function ‘write’:
Global.h:4:23: error: expected ‘]’ before ‘;’ token
 #define PAGE_SIZE 8000;
                       ^
Serializer.c:187:26: note: in expansion of macro ‘PAGE_SIZE’
   static char * IOBUFFER[PAGE_SIZE];
                          ^
Serializer.c:190:21: error: ‘IOBUFFER’ undeclared (first use in this function)
   if (setvbuf(file, IOBUFFER, _IOFBF, PAGE_SIZE) != 0) {
                     ^
Serializer.c:190:21: note: each undeclared identifier is reported only once for each function it appears in
In file included from Serializer.h:5:0,
                 from Serializer.c:3:
Global.h:4:23: error: expected ‘)’ before ‘;’ token
 #define PAGE_SIZE 8000;
                       ^
Serializer.c:190:39: note: in expansion of macro ‘PAGE_SIZE’
   if (setvbuf(file, IOBUFFER, _IOFBF, PAGE_SIZE) != 0) {
                                       ^
Serializer.c:202:24: error: ‘head2’ has no member named ‘data_units’
     fwrite(&(Serializer->data_units[i].attr_id), sizeof(int), 1, file);
                        ^
Serializer.c:206:24: error: ‘head2’ has no member named ‘data_units’
     fwrite(&(Serializer->data_units[i].offset), sizeof(int), 1, file);
                        ^
Serializer.c:210:22: error: ‘head2’ has no member named ‘data_units’
     switch(Serializer->data_units[i].dtype) {
                      ^
Serializer.c:212:26: error: ‘head2’ has no member named ‘data_units’
       fwrite(&(Serializer->data_units[i].data), sizeof(int), 1, file);
                          ^
Serializer.c:215:26: error: ‘head2’ has no member named ‘data_units’
       fwrite(&(Serializer->data_units[i].data), sizeof(bool), 1, file);
                          ^
Serializer.c:218:26: error: ‘head2’ has no member named ‘data_units’
       fwrite(&(Serializer->data_units[i].data), sizeof(char), strlen(Serializer->data_units[i].data), file);
                          ^
Serializer.c:218:63: warning: incompatible implicit declaration of built-in function ‘strlen’
       fwrite(&(Serializer->data_units[i].data), sizeof(char), strlen(Serializer->data_units[i].data), file);
                                                               ^
Serializer.c:218:80: error: ‘head2’ has no member named ‘data_units’
       fwrite(&(Serializer->data_units[i].data), sizeof(char), strlen(Serializer->data_units[i].data), file);
                                                                                ^
